Fix animation on collapses

--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,12 +1,24 @@
 @keyframes content-appear {
   0%{
     opacity: 0;
-    transform: translateY(-300px);
+    transform: translateY(-94px);
   }
 
   100%{
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes content-disappear {
+  0%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  100%{
+    opacity: 0;
+    transform: translateY(-94px);
   }
 }
 
